# clockie

./: Cargo.toml  Makefile  README.md  clockie-prd.md  config.example.toml  flake.nix
docs/: architecture.md  cli.md  compositor-integration.md  configuration.md  custom-faces.md  ipc.md  multi-monitor.md
src/: battery.rs  canvas.rs  config.rs  ctl.rs  ipc.rs  main.rs  time_utils.rs  wayland.rs
src/renderer/: analogue.rs  battery.rs  digital.rs  mod.rs  subclock.rs
