[package]
name = "clockie"
version = "0.1.1"
edition = "2021"
description = "Lightweight Wayland layer-shell desktop clock widget"

[[bin]]
name = "clockie"
path = "src/main.rs"

[[bin]]
name = "clockiectl"
path = "src/bin/clockiectl.rs"

[dependencies]
# Wayland
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Rendering
tiny-skia = "0.11"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Time
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Event loop
calloop = "0.14"

# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["poll"] }
libc = "0.2"
ctrlc = "3"
